style: fix small error
if there was too much content on a page, the main became too high and the footer was only visible after scrolling

--- a/frontend/src/assets/css/base.css
+++ b/frontend/src/assets/css/base.css
@@ -117,7 +117,8 @@ div#app {
 }
 
 div.page-wrap main {
-  height: 100%;
+  min-height: 10%;
+  flex-grow: 1;
 }
 
 a {
